changes to files and folders. change on src link on images

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="https://fcafade2-4a7a-4a5c-af65-0df17183edcb.ws-eu01.gitpod.io/mini-browser/workspace/Whiskey-drop/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            <img src="assets/images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -92,7 +92,7 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="https://fcafade2-4a7a-4a5c-af65-0df17183edcb.ws-eu01.gitpod.io/mini-browser/workspace/Whiskey-drop/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            <img src="assets/images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
